monster-service.yaml
apiVersion: v1
#Creating service
kind: Service
metadata:
  name: monster-service
  labels:
    app: monster-app
spec:
  selector:
    app: monster-app
#Creating LoadBalancer that exposes the app on port 80
#and forwards the traffic to the pods on port 30200
  type: LoadBalancer
  ports:
  - nodePort : 30200
    protocol: TCP
    port: 80
    targetPort: 80
  sessionAffinity: ClientIP
